--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -527,7 +527,7 @@ h6,
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
-  color: var(--bs-heading-color);
+  /* color: var(--bs-heading-color); */
 }
 
 h1,
