Add SSN fields to Franchise create and update pages

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -768,6 +768,10 @@ label {
 
 button {
   border-radius: 0;
+  background:transparent;  
+}
+.ti-edit{
+  color: #FF7B31;
 }
 
 button:focus:not(:focus-visible) {
